# university-assignment-circle-skinning

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: fragment.glsl  main.cpp  vertex.glsl
